Bug 1733232 - Use reflow callbacks to properly track video control / caption sizes. r=dholbert,a=dsmith

This ensures not to fire dummy events for measuring reflows for example.

Needs a test, maybe Alwu can help with that?

Differential Revision: https://phabricator.services.mozilla.com/D142897